[package]
name = "component-time"
version = "0.1.0"
edition = "2024"

[dependencies]
act-sdk = "0.2.2"
wit-bindgen = { version = "0.54", features = ["async-spawn"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

[lib]
crate-type = ["cdylib"]
