[package]
name = "component-time"
description = "Time and timezone utilities"
version = "0.1.0"
edition = "2024"

[dependencies]
act-sdk = "0.4"
wit-bindgen = { version = "0.57", features = ["async-spawn"] }
chrono = "0.4"
chrono-tz = "0.10"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]
